--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CitrusCSS is a lightweight, classless CSS library with a fresh citrus theme!" />
     <title>CitrusCSS | Lightweight Citrus-Themed Stylesheet</title>
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" type="image/png" href="/public/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+    <link rel="shortcut icon" href="/public/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="CitrusCSS" />
+    <link rel="manifest" href="/public/site.webmanifest" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +20,7 @@
 <body>
     <header>
         <div style="display: flex; align-items: center; gap: 1rem;">
-            <img src="CitrusCSS.png" alt="CitrusCSS Logo" style="width: 2rem; height: 2rem; margin-bottom: 20px;" />
+            <img src="./public/CitrusCSS.png" alt="CitrusCSS Logo" style="width: 2rem; height: 2rem; margin-bottom: 20px;" />
             <h1 class="text-gradient">CitrusCSS</h1>
         </div>
         <nav>
@@ -135,7 +140,7 @@
             <h3>5. Image and Multimedia</h3>
             <p>Styles for images, audio, and video.</p>
             <div class="card">
-                <img src="CitrusCSS.png" alt="Citrus CSS LOGO" style="width: 100px; height: auto; background-color: #222222;">
+                <img src="./public/CitrusCSS.png" alt="Citrus CSS LOGO" style="width: 100px; height: auto; background-color: #222222;">
                 <audio controls src="">Audio not supported.</audio>
                 <video controls poster="">
                     <source src="" type="video/mp4">
