--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CitrusCSS is a lightweight, classless CSS library with a fresh citrus theme!" />
-    <title>CitrusCSS | Lightweight Citrus-Themed Stylesheet</title>
+    <title>CitrusCSS</title>
     <link rel="icon" type="image/png" href="/public/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
     <link rel="shortcut icon" href="/public/favicon.ico" />
